src/test/fun-test/semantic/ReturnValueStrictCast.java.err
Semantic error: type mismatch - expected SHORT, got INT, line 5, pos 25
