src/test/fun-test/semantic/ReturnValueStrictCast.java
class Main {
    int foo() { return 0; }

    void main() {
        short bar = foo();
    }
}